First successful test

--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -9,7 +9,7 @@ body{
     align-items: center;   */
 }
 
-.flex-cont span{
+.flex-cont span, .flex-cont span div{
     display: block;
     width: auto;
     background-color: white;
