--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,21 +12,22 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8  offset-lg-2">
-                    <button onclick=myFunction()>Add via flask</button>
+                    <!-- <button onclick=myFunction()>Add via flask</button>
                     <button id="addnumtest">Add via JS</button>
                     <button id="addnumtestmult">Add multiple via JS</button>
-                    <button id="addnumtestdyn">Add dynamic via JS</button>
-                    <!-- <div class="flex-cont" id="testingdiv" hx-get="/get_test" hx-trigger="load, click"></div> -->
-                    <div class="flex-cont" id="testingdiv"></div>
+                    <button id="addnumtestdyn">Add dynamic via JS</button> -->
+                    <div class="flex-cont" id="testingdiv">
+                        <div id="1ExF15z6YxFrNZHcnH2sYohbKBh47b1aow" class="wallet-div" data-checked-to="0">1ExF....1aow</div>
+                    </div>
                 </div>
             </div>
         </div>
-        <script>
+        <!-- <script>
             async function myFunction() {
   const a = await fetch("/set_test")
 }   
         console.log("in index")
-        </script>
+        </script> -->
     </body>
 
 </html>
