--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,6 +18,8 @@
                     <button id="addnumtestdyn">Add dynamic via JS</button> -->
                     <div class="flex-cont" id="testingdiv">
                         <div id="1ExF15z6YxFrNZHcnH2sYohbKBh47b1aow" class="wallet-div" data-checked-to="0">1ExF....1aow</div>
+                        <div id="1A1RWwZHpWd3x1q6ZX5gtrxhwAx5pbZGpb" class="wallet-div" data-checked-to="0">1A1R....ZGpb</div>
+                        <div id="1A2VHcohqFRAU4DijTx8aWMWmadeEwFRJT" class="wallet-div" data-checked-to="0">1A2V....FRJT</div>
                     </div>
                 </div>
             </div>
