--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -1,28 +1,47 @@
-body{
-    background-color:rgb(100, 100, 100);
+body {
+    background-color: rgb(100, 100, 100);
 }
 
-.flex-cont{
+.flex-cont {
     background-color: rgb(60, 60, 60);
     /* display: flex;
     justify-content: space-around;
     align-items: center;   */
 }
 
-.flex-cont span, .flex-cont  div{
+.flex-cont span,
+.flex-cont div {
     display: block;
     width: auto;
     background-color: white;
-    text-align: center; 
+    text-align: center;
     box-sizing: border-box;
     border: solid red 1px;
     /* transition: width 2s;
     transition: flex-grow 1000ms linear; */
-    transition:all ease-in-out 1s;
+    transition: all ease-in-out 1s;
     margin-top: 10px;
 }
 
-.initial-grow{
+.initial-grow {
     margin-top: -20.5px !important;
-    transition:all 2s;
+    transition: all 2s;
+}
+
+.link {
+    fill: none;
+    stroke: #000;
+    stroke-opacity: .2;
+}
+
+.link:hover {
+    stroke-opacity: .5;
+}
+
+
+#sankey-container {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
