--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='/styles/style.css') }}">
     <script src="{{ url_for('static',filename='/scripts/main.js') }}" defer></script>
     <!-- <link rel="stylesheet" href="app/styles/style.css"> -->
-    <script src="https://unpkg.com/d3-array@1"></script>
+    <!-- <script src="https://unpkg.com/d3-array@1"></script>
     <script src="https://unpkg.com/d3-collection@1"></script>
     <script src="https://unpkg.com/d3-path@1"></script>
     <script src="https://unpkg.com/d3-shape@1"></script>
     <script src="https://unpkg.com/d3-sankey@0"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/sankey.js"></script>
-
+    <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="{{ url_for('static',filename='/scripts/sankey.js') }}" defer></script>
     <script>
         var sankey = d3.sankey();
