--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,202 +1,18 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>SANKEY Experiment</title>
-<style>
-    body {
-        background-color: #333;
-    }
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link rel="stylesheet" href="{{ url_for('static',filename='/styles/style.css') }}">
+    <script src="{{ url_for('static',filename='/scripts/d3.v7.js') }}"></script>
+    <script src="{{ url_for('static',filename='/scripts/d3-sankey.js') }}"></script>
+    <script src="{{ url_for('static',filename='/scripts/main.js') }}" defer></script>
 
-    .node rect {
-        cursor: move;
-        fill-opacity: .9;
-        shape-rendering: crispEdges;
-    }
-
-    .node text {
-        pointer-events: none;
-        /* text-shadow: 0 1px 0 #fff; */
-        
-        color: #fff;
-    }
-
-    .link {
-        fill: none;
-        stroke: #000;
-        stroke-opacity: .2;
-    }
-
-    .link:hover {
-        stroke-opacity: .5;
-    }
-</style>
-
+    <title>Sankey test</title>
+</head>
 <body>
-
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <!-- <script src="sankey.js"></script> -->
-    <script src="{{ url_for('static',filename='/scripts/sankey.js') }}"></script>
-    <script>
-        var g_graph;
-        var units = "Widgets";
-
-        // set the dimensions and margins of the graph
-        var margin = { top: 10, right: 10, bottom: 10, left: 10 },
-            width = 700 - margin.left - margin.right,
-            height = 300 - margin.top - margin.bottom;
-
-        // format variables
-        var formatNumber = d3.format(",.0f"),    // zero decimal places
-            format = function (d) { return formatNumber(d) + " " + units; },
-            color = d3.scaleOrdinal(d3.schemeCategory20);
-
-        // append the svg object to the body of the page
-        var svg = d3.select("body").append("svg")
-            .attr("width", width + margin.left + margin.right + 100)
-            .attr("height", height + margin.top + margin.bottom)
-            .append("g")
-            .attr("transform",
-                "translate(" + margin.left + "," + margin.top + ")");
-
-        // Set the sankey diagram properties
-        var sankey = d3.sankey()
-            .nodeWidth(36)
-            .nodePadding(40)
-            .size([width, height]);
-
-        var path = sankey.link();
-
-        // load the data
-        d3.json("{{ url_for('static',filename='/scripts/sankey.json') }}", function (error, graph) {
-            g_graph = graph;
-            sankey
-                .nodes(graph.nodes)
-                .links(graph.links)
-                .layout(32);
-
-            // add in the links
-            var link = svg.selectAll(".link")
-                .data(graph.links)
-                .enter().append("path")
-                .attr("class", "link")
-                .attr("d", path)
-                .style("stroke-width", function (d) { return Math.max(1, d.dy); })
-                .sort(function (a, b) { return b.dy - a.dy; })
-                .on("click", (e) => {console.log(e)});
-
-            // add the link titles
-            link.append("title")
-                .text(function (d) {
-                    return d.source.name + " → " +
-                        d.target.name + "\n" + format(d.value);
-                });
-
-            // add in the nodes
-            var node = svg.selectAll(".node")
-                .data(graph.nodes)
-                .enter().append("g")
-                .attr("class", "node")
-                .attr("transform", function (d) {
-                    return "translate(" + d.x + "," + d.y + ")";
-                })
-                .on("click", addNewNode);
-                // .call(d3.drag()
-                //     .subject(function (d) {
-                //         return d;
-                //     })
-                //     .on("start", function () {
-                //         this.parentNode.appendChild(this);
-                //     })
-                //     .on("drag", dragmove));
-
-            // add the rectangles for the nodes
-            node.append("rect")
-                .attr("height", function (d) { return d.dy; })
-                .attr("width", sankey.nodeWidth())
-                .style("fill", function (d) {
-                    return d.color = color(d.name.replace(/ .*/, ""));
-                })
-                .style("stroke", function (d) {
-                    return d3.rgb(d.color).darker(2);
-                })
-                .append("title")
-                .text(function (d) {
-                    return d.name + "\n" + format(d.value);
-                });
-
-            // add in the title for the nodes
-            node.append("text")
-                .attr("x", -6)
-                .attr("y", function (d) { return d.dy / 2; })
-                .attr("dy", ".35em")
-                .attr("text-anchor", "end")
-                .attr("transform", null)
-                .text(function (d) { return d.name; })
-                .filter(function (d) { return d.x < width / 2; })
-                .attr("x", 6 + sankey.nodeWidth())
-                .attr("text-anchor", "start");
-
-            // the function for moving the nodes
-            function dragmove(d) {
-                d3.select(this)
-                    .attr("transform",
-                        "translate("
-                        + d.x + ","
-                        + (d.y = Math.max(
-                            0, Math.min(height - d.dy, d3.event.y))
-                        ) + ")");
-                sankey.relayout();
-                link.attr("d", path);
-            }
-        });
-
-        function addNewNode(e){
-            console.log(e.name)
-            newNode = {"node": 5, "name": "node5"}
-            newPath = {"source": 4, "target": 5, "value": 8}
-            console.log(svg._groups[0]);
-            var allNodes = svg.selectAll(".nodes")
-            console.log("allnodes", allNodes);
-            console.log(g_graph);
-            g_graph.nodes.push(newNode)
-            console.log(g_graph);
-            var allNode = svg.selectAll(".node")
-                .data(g_graph.nodes)
-                .enter().append("g")
-                .attr("class", "node")
-                .attr("transform", function (d) {
-                    return "translate(700, 15)";
-                })
-                .on("click", addNewNode);
-            // .append(newNode)
-            // allNodes.data(g_graph.nodes).enter().append('g').exit()
-            allNode.append("rect")
-                .attr("height", 240)
-                .attr("width", sankey.nodeWidth())
-                .style("fill", function (d) {
-                    return d.color = "#FF0000";
-                })
-                .style("stroke", function (d) {
-                    return d3.rgb(d.color).darker(2);
-                })
-                .append("title")
-                .text(function (d) {
-                    return d.name + "\n" + format(d.value);
-                });
-
-
-                g_graph.links.push(newPath)
-            // add in the links
-            var path = sankey.link();
-            var link = svg.selectAll(".link")
-                .data(g_graph.links)
-                .enter().append("path")
-                .attr("class", "link")
-                .attr("d", "M36,90C125.33333333333333,90 125.33333333333333,110.04736892353037 214.66666666666666,110.04736892353037")
-                .style("stroke-width", function (d) { return Math.max(1, d.dy); })
-                .sort(function (a, b) { return b.dy - a.dy; })
-                .on("click", (e) => {console.log(e)});
-        }
-
-    </script>
-
+    <div id="sankey-container"></div>
+    
 </body>
+</html>
