--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -2,6 +2,11 @@ body {
     background-color: #222;
 }
 
+canvas{
+    height: 100vh;
+    width: 100vw;
+}
+
 .flex-cont {
     background-color: rgb(60, 60, 60);
     /* display: flex;
