--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="{{ url_for('static',filename='/styles/style.css') }}">
-    <script src="{{ url_for('static',filename='/scripts/d3.v7.js') }}"></script>
-    <script src="{{ url_for('static',filename='/scripts/d3-sankey.js') }}"></script>
+    <script src="{{ url_for('static',filename='/scripts/d3.v4.js') }}"></script>
     <script src="{{ url_for('static',filename='/scripts/main.js') }}" defer></script>
 
     <title>Sankey test</title>
 </head>
 <body>
+    <canvas></canvas>
     <div id="sankey-container"></div>
     
 </body>
