updated for testing

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <canvas></canvas>
-    <div id="sankey-container"></div>
+    <div id="copy-div"></div>
     
 </body>
 </html>
