--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,17 @@
 <html>
     <head>
       <meta charset="UTF-8">
-      <script src="https://unpkg.com/htmx.org@1.6.1"></script>
+      <!-- <script src="https://unpkg.com/htmx.org@1.6.1"></script> -->
       <link rel="stylesheet" href="{{ url_for('static',filename='/styles/style.css') }}">
+      <script src="{{ url_for('static',filename='/scripts/d3/d3-sankey.js') }}"></script>
+      <script src="{{ url_for('static',filename='/scripts/d3/d3.v7.js') }}"></script>
       <script src="{{ url_for('static',filename='/scripts/main.js') }}" defer></script>
       <!-- <link rel="stylesheet" href="app/styles/style.css"> -->
     </head>
 
 
     <body>
+        <svg></svg>
         <div class="container">
             <div class="row">
                 <div class="col-lg-8  offset-lg-2">
@@ -16,11 +19,11 @@
                     <button id="addnumtest">Add via JS</button>
                     <button id="addnumtestmult">Add multiple via JS</button>
                     <button id="addnumtestdyn">Add dynamic via JS</button> -->
-                    <div class="flex-cont" id="testingdiv">
+                    <!-- <div class="flex-cont" id="testingdiv">
                         <div id="1ExF15z6YxFrNZHcnH2sYohbKBh47b1aow" class="wallet-div" data-checked-to="0">1ExF....1aow</div>
                         <div id="1A1RWwZHpWd3x1q6ZX5gtrxhwAx5pbZGpb" class="wallet-div" data-checked-to="0">1A1R....ZGpb</div>
                         <div id="1A2VHcohqFRAU4DijTx8aWMWmadeEwFRJT" class="wallet-div" data-checked-to="0">1A2V....FRJT</div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
