--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,7 @@
     <head>
       <meta charset="UTF-8">
       <!-- <script src="https://unpkg.com/htmx.org@1.6.1"></script> -->
+      <link rel="stylesheet" href="{{ url_for('static',filename='/styles/normalize.css') }}">
       <link rel="stylesheet" href="{{ url_for('static',filename='/styles/style.css') }}">
       <script src="{{ url_for('static',filename='/scripts/d3/d3-sankey.js') }}"></script>
       <script src="{{ url_for('static',filename='/scripts/d3/d3.v7.js') }}"></script>
@@ -12,9 +13,9 @@
 
     <body>
         <svg></svg>
-        <div class="container">
+        <!-- <div class="container">
             <div class="row">
-                <div class="col-lg-8  offset-lg-2">
+                <div class="col-lg-8  offset-lg-2"> -->
                     <!-- <button onclick=myFunction()>Add via flask</button>
                     <button id="addnumtest">Add via JS</button>
                     <button id="addnumtestmult">Add multiple via JS</button>
@@ -24,9 +25,9 @@
                         <div id="1A1RWwZHpWd3x1q6ZX5gtrxhwAx5pbZGpb" class="wallet-div" data-checked-to="0">1A1R....ZGpb</div>
                         <div id="1A2VHcohqFRAU4DijTx8aWMWmadeEwFRJT" class="wallet-div" data-checked-to="0">1A2V....FRJT</div>
                     </div> -->
-                </div>
+                <!-- </div>
             </div>
-        </div>
+        </div> -->
         <!-- <script>
             async function myFunction() {
   const a = await fetch("/set_test")
