--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -29,6 +29,21 @@ body {
     transition: all 1s ease-out;
 }
 
+#loading-indicator{
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    font-family: sans-serif;
+    font-size: 25px;
+    background-color: #777;
+    border: solid 2px;
+    padding: 0 3px;
+}
+
+.hidden{
+    display: none;
+}
+
 /* 
 
 body{
