added loading bar

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,7 @@
 
 
     <body>
+        <div id="loading-indicator">Loading data</div>
         <svg></svg>
         <!-- <div class="container">
             <div class="row">
