--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -29,15 +29,22 @@ body {
     transition: all 1s ease-out;
 }
 
-#loading-indicator{
+.top-bar{
     position: absolute;
-    left: 10px;
     top: 10px;
     font-family: sans-serif;
     font-size: 25px;
     background-color: #777;
     border: solid 2px;
     padding: 0 3px;
+}
+
+#loading-indicator{
+    right: 10px;
+}
+
+#last-block-info{
+    left: 10px;
 }
 
 .hidden{
