--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,8 @@
 
 
     <body>
-        <div id="loading-indicator">Loading data</div>
+        <div id="loading-indicator" class="hidden top-bar">Loading data</div>
+        <div id="last-block-info" class="top-bar">Placeholder</div>
         <svg></svg>
         <!-- <div class="container">
             <div class="row">
