--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,7 @@
 
     <body>
         <div id="loading-indicator" class="hidden top-bar">Loading data</div>
+        <div id="force-re-draw" class="top-bar">Re-Draw</div>
         <div id="last-block-info" class="top-bar">Placeholder</div>
         <svg></svg>
         <!-- <div class="container">
