--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #333;
+    background-color: #000000;
 }
 
 .node rect {
@@ -14,7 +14,7 @@ body {
 
 .link {
     fill: none;
-    stroke: #000;
+    stroke: #ffffff;
     stroke-opacity: .2;
 }
 
@@ -48,7 +48,10 @@ body {
 }
 
 #loading-indicator{
-    right: 10px;
+    /* right: 10px; */
+    position: absolute;
+    right: 50%;
+    top: 50%;
 }
 
 #force-re-draw{
@@ -65,6 +68,50 @@ body {
 
 .hidden{
     display: none;
+}
+
+
+#context-menu{
+    position: absolute;
+    background: rgb(201, 201, 201);
+    box-shadow: 3px 3px 2px 1px rgba(15, 15, 15, 0.5);
+}
+
+a.button, button {
+    appearance: auto;
+    -webkit-appearance: button;
+    -webkit-text-size-adjust: 100%;
+    text-rendering: auto;
+    color: buttontext;
+    letter-spacing: normal;
+    word-spacing: normal;
+    line-height: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: center;
+    align-items: flex-start;
+    cursor: default;
+    box-sizing: border-box;
+    background-color: buttonface;
+    margin: 0em;
+    padding-block: 1px;
+    padding-inline: 6px;
+    border-width: 1px;
+    border-style: outset;
+    border-color: buttonborder;
+    border-image: initial;
+    font-family: inherit;
+    font-size: 100%;
+    line-height: 1.15;
+    margin: 0;
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    appearance: button;
+
+    text-decoration: none;
+    color: initial;
 }
 
 /* 
