--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,9 +13,10 @@
 
     <body>
         <div id="loading-indicator" class="hidden top-bar">Loading data</div>
-        <div id="force-re-draw" class="top-bar">Re-Draw</div>
+        <!-- <div id="force-re-draw" class="top-bar">Re-Draw</div> -->
         <div id="last-block-info" class="top-bar">Placeholder</div>
         <svg></svg>
+        <div id="context-menu" class="hidden"></div>
         <!-- <div class="container">
             <div class="row">
                 <div class="col-lg-8  offset-lg-2"> -->
